Little clean up.

--- a/src/assets/styles/site.scss
+++ b/src/assets/styles/site.scss
@@ -1,4 +1,4 @@
-@import "~bootstrap/scss/bootstrap"; // replace with indvidual Bootstrap assets!
+@import "~bootstrap/scss/bootstrap"; // replace with individual Bootstrap assets!
 
 .section {
     @include media-breakpoint-up(md) {
