--- a/src/assets/styles/site.scss
+++ b/src/assets/styles/site.scss
@@ -1,5 +1,17 @@
 $font-family-base: 'EB Garamond';
-@import "~bootstrap/scss/bootstrap"; // replace with individual Bootstrap assets!
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/reboot";
+
+
+@import "~bootstrap/scss/grid";
+@import "~bootstrap/scss/utilities/display";
+@import "~bootstrap/scss/utilities/flex";
+@import "~bootstrap/scss/utilities/spacing";
+
+@import "~bootstrap/scss/type";
+
 
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;1,400&display=swap');
 @font-face {
