--- a/src/assets/styles/settings.scss
+++ b/src/assets/styles/settings.scss
@@ -8,7 +8,7 @@ $h3-font-size: $font-size-base * 1.5;
 $h4-font-size: $font-size-base * 1.25;
 $h5-font-size: $font-size-base * 1;
 
-$font-family-base: "EB Garamond";
+$font-family-base: "Raleway";
 
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
