--- a/src/assets/styles/settings.scss
+++ b/src/assets/styles/settings.scss
@@ -1,16 +1,30 @@
 $spacer: 2rem;
 $enable-rounded: false;
 
-$font-size-base: 1rem;
-$h1-font-size: $font-size-base * 2;
-$h2-font-size: $font-size-base * 1;
-$h3-font-size: $font-size-base * 1.5;
-$h4-font-size: $font-size-base * 1.25;
-$h5-font-size: $font-size-base * 1;
+// $font-size-base: 1rem;
+// $h1-font-size: $font-size-base * 2;
+// $h2-font-size: $font-size-base * 1;
+// $h3-font-size: $font-size-base * 1.5;
+// $h4-font-size: $font-size-base * 1.25;
+// $h5-font-size: $font-size-base * 1;
 
-$font-family-base: "Raleway";
+$font-family-base: "Playfair Display', serif;";
+
+$btn-padding-y: .5rem;
+$btn-padding-x: 2rem;
+
+$card-border-radius: 0;
+$card-border-width: 0;
 
 @import "~bootstrap/scss/functions";
+
+$primary: #F1DEDE;
+$secondary: #4A041D;
+$light: #F5F1ED;
+$tertiary: #B76B46;
+$navy: #1C3244;
+
+
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/reboot";
