--- a/src/assets/styles/settings.scss
+++ b/src/assets/styles/settings.scss
@@ -10,7 +10,7 @@ $enable-rounded: false;
 
 $font-family-base: "Playfair Display', serif;";
 
-$btn-padding-y: .5rem;
+$btn-padding-y: 0.5rem;
 $btn-padding-x: 2rem;
 
 $card-border-radius: 0;
@@ -18,13 +18,25 @@ $card-border-width: 0;
 
 @import "~bootstrap/scss/functions";
 
-$primary: #F1DEDE;
-$secondary: #4A041D;
-$light: #F5F1ED;
-$tertiary: #B76B46;
-$navy: #1C3244;
-
+$primary: #f1dede;
+$secondary: #4a041d;
+$light: #f5f1ed;
+$tertiary: #b76b46;
+$navy: #1c3244;
 
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/reboot";
+
+$h1-font-size: $font-size-base * 4;
+$h2-font-size: $font-size-base * 3;
+$h3-font-size: $font-size-base * 2;
+$h4-font-size: $font-size-base * 1.5;
+$h5-font-size: $font-size-base * 1;
+$h6-font-size: $font-size-base;
+
+$h1-font-size-sm: $font-size-base * 3.5;
+$h2-font-size-sm: $font-size-base * 3;
+$h3-font-size-sm: $font-size-base * 1.35;
+$h4-font-size-sm: $font-size-base * 1.125;
+$h5-font-size-sm: $font-size-base;
